# accounting-engine

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/core/: settings.py
app/domain/shared/: value_objects.py
app/domain/wallet/: entities.py  repositories.py
tests/: test_health.py  test_settings.py
tests/unit/domain/wallet/: test_money.py  test_wallet.py
