[tool.poetry]
package-mode = false

[project]
name = "accounting-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Cristian Paixão",email = "cristian.paixao@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)"
]
