[tool.poetry]
name = "accounting-engine"
version = "0.1.0"
packages = [{ include = "app" }]

[project]
name = "accounting-engine"
version = "0.1.0"
description = ""
authors = [
    {name = "Cristian Paixão",email = "cristian.paixao@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
